correct submission function

--- a/run.ipynb
+++ b/run.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2c5bb26a",
+   "id": "0e767c0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4393a329",
+   "id": "40ada375",
    "metadata": {},
    "outputs": [
     {
@@ -101,10 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ec7031ed",
+   "execution_count": 14,
+   "id": "0cb06f7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1  1 ... -1 -1 -1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Construct feature representations for test tweets\n",
     "import csv\n",
@@ -116,12 +124,20 @@
     "\n",
     "def create_csv_submission(ids, y_pred, name):\n",
     "    \"\"\"\n",
-    "    Creates an output file in .csv format for submission to Kaggle or AIcrowd\n",
-    "    Arguments: ids (event ids associated with each prediction)\n",
-    "               y_pred (predicted class labels)\n",
-    "               name (string name of .csv output file to be created)\n",
+    "    This function creates a csv file named 'name' in the format required for a submission in Kaggle or AIcrowd.\n",
+    "    The file will contain two columns the first with 'ids' and the second with 'y_pred'.\n",
+    "    y_pred must be a list or np.array of 1 and -1 otherwise the function will raise a ValueError.\n",
+    "\n",
+    "    Args:\n",
+    "        ids (list,np.array): indices\n",
+    "        y_pred (list,np.array): predictions on data correspondent to indices\n",
+    "        name (str): name of the file to be created\n",
     "    \"\"\"\n",
-    "    with open(name, \"w\") as csvfile:\n",
+    "    # Check that y_pred only contains -1 and 1\n",
+    "    if not all(i in [-1, 1] for i in y_pred):\n",
+    "        raise ValueError(\"y_pred can only contain values -1, 1\")\n",
+    "\n",
+    "    with open(name, \"w\", newline=\"\") as csvfile:\n",
     "        fieldnames = [\"Id\", \"Prediction\"]\n",
     "        writer = csv.DictWriter(csvfile, delimiter=\",\", fieldnames=fieldnames)\n",
     "        writer.writeheader()\n",
@@ -137,6 +153,7 @@
     "    return lines\n",
     "\n",
     "ids_test = get_test_ids(test_data_path)\n",
+    "print(y_test_pred)\n",
     "y_pred = []\n",
     "y_pred = y_test_pred\n",
     "y_pred[y_pred <= 0] = -1\n",
@@ -147,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b01638",
+   "id": "974b3fcc",
    "metadata": {},
    "outputs": [],
    "source": []
