clean notebook structure

--- a/run.ipynb
+++ b/run.ipynb
@@ -2,14 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0e767c0e",
+   "execution_count": 22,
+   "id": "22e8a0bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### LOADING EMDEDDINGS AND DATA\n",
+    "### IMPORTS AND CONSTANTS\n",
     "\n",
     "import numpy as np\n",
+    "import csv\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "# !pip install scikit-learn\n",
+    "\n",
+    "test_data_path = 'twitter-datasets/test_data.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c15efa54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### DATA LOADING\n",
     "\n",
     "# Load the word embeddings\n",
     "word_embeddings = np.load('embeddings.npy')\n",
@@ -44,32 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "40ada375",
+   "execution_count": 24,
+   "id": "ddf4a178",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in c:\\users\\41763\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.7_qbz5n2kfra8p0\\localcache\\local-packages\\python37\\site-packages (1.0.2)\n",
-      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\41763\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.7_qbz5n2kfra8p0\\localcache\\local-packages\\python37\\site-packages (from scikit-learn) (1.21.6)\n",
-      "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\41763\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.7_qbz5n2kfra8p0\\localcache\\local-packages\\python37\\site-packages (from scikit-learn) (1.7.3)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\41763\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.7_qbz5n2kfra8p0\\localcache\\local-packages\\python37\\site-packages (from scikit-learn) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\41763\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.7_qbz5n2kfra8p0\\localcache\\local-packages\\python37\\site-packages (from scikit-learn) (3.1.0)\n",
-      "Validation Accuracy: 0.577728\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "### TRAINING THE LINEAR CLASSIFIER\n",
-    "# !pip install scikit-learn\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "# Step 2: Construct Features for Training Texts\n",
+    "### DEFINE FUNCTIONS\n",
     "\n",
     "def average_word_vectors(tweet, word_to_embedding):\n",
     "    words = tweet.split()\n",
@@ -79,49 +76,7 @@
     "    else:\n",
     "        # If none of the words in the tweet are in the embeddings, return a zero vector\n",
     "        return np.zeros_like(word_embeddings[0])\n",
-    "\n",
-    "\n",
-    "# Construct feature representations for training tweets\n",
-    "train_features = [average_word_vectors(tweet, word_to_embedding) for tweet in train_tweets]\n",
-    "\n",
-    "# Step 3: Train a Linear Classifier\n",
-    "\n",
-    "# Split the data into training and validation sets\n",
-    "X_train, X_val, y_train, y_val = train_test_split(train_features, labels, test_size=0.1, random_state=42)\n",
-    "\n",
-    "# Initialize and train the model\n",
-    "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Validate\n",
-    "y_pred = model.predict(X_val)\n",
-    "accuracy = accuracy_score(y_val, y_pred)\n",
-    "print(f\"Validation Accuracy: {accuracy}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0cb06f7c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1  1  1 ... -1 -1 -1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Construct feature representations for test tweets\n",
-    "import csv\n",
-    "test_data_path = 'twitter-datasets/test_data.txt'\n",
-    "test_features = [average_word_vectors(tweet, word_to_embedding) for tweet in test_tweets]\n",
-    "\n",
-    "# Make predictions\n",
-    "y_test_pred = model.predict(test_features)\n",
-    "\n",
+    "    \n",
     "def create_csv_submission(ids, y_pred, name):\n",
     "    \"\"\"\n",
     "    This function creates a csv file named 'name' in the format required for a submission in Kaggle or AIcrowd.\n",
@@ -150,7 +105,66 @@
     "    for rowidx in range(len(lines)):\n",
     "        index = lines[rowidx].index(',')\n",
     "        lines[rowidx] = lines[rowidx][:index]\n",
-    "    return lines\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "35a2a9f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.577728\n"
+     ]
+    }
+   ],
+   "source": [
+    "### TRAINING THE LINEAR CLASSIFIER\n",
+    "\n",
+    "# Construct feature representations for training tweets\n",
+    "train_features = [average_word_vectors(tweet, word_to_embedding) for tweet in train_tweets]\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(train_features, labels, test_size=0.1, random_state=42)\n",
+    "\n",
+    "# Initialize and train the model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Validate\n",
+    "y_pred = model.predict(X_val)\n",
+    "accuracy = accuracy_score(y_val, y_pred)\n",
+    "print(f\"Validation Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0fe11ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1  1 ... -1 -1 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### LINEAR CLASSIFIER PREDICTIONS\n",
+    "\n",
+    "# Construct feature representations for test tweets\n",
+    "test_features = [average_word_vectors(tweet, word_to_embedding) for tweet in test_tweets]\n",
+    "\n",
+    "# Make predictions\n",
+    "y_test_pred = model.predict(test_features)\n",
+    "\n",
+    "\n",
     "\n",
     "ids_test = get_test_ids(test_data_path)\n",
     "print(y_test_pred)\n",
@@ -164,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974b3fcc",
+   "id": "0ef086dd",
    "metadata": {},
    "outputs": [],
    "source": []
